# ietfdata

./: CHANGELOG.md  CONTRIBUTING  LICENSE  Makefile  Pipfile  README  README.md  analyse-ietf-data.py  datatracker-test.py  datatracker.py  download-ietf-data.py  download.py  ietfdata.py  mypy.ini  pyproject.toml  rfc.py  rfcindex.py  setup.py
.circleci/: config.yml
examples/: affiliations.py  bluesheets.py  chatlogs.py  document-authors.py  document-timeline.py  download-all-mail.py  draft-authors.py  draft-references.py  draft-submissions-by-date.py  draft-submissions-from-email.py  draft-submissions.py  drafts-for-person.py  drafts-for-rfc.py  drafts-for-rfcs.py  drafts-for-wg.py  emails-per-person.py  identifier_affiliation_mappings.py  identifier_affiliation_mappings_meetings.py  identifier_affiliation_mappings_meetingsy.py  identifier_affiliation_mappings_rfc.py  iesg-processing-time.py  ietf-areas.py  ietf-leadership.py  ietf-list-membership.py  mailing-lists.py  non-wg-standards-track-rfcs.py  org-chart.py  person-attendance.py  person-emails.py  person.py  recent-pubreq.py  rfc-data.py  rfc-granular-2000-2019.csv  rfc-per-year-ietf.py  rfc-per-year.py  rfc-streams.py  rfc-unique-authors.py  role-names.py  uniq-emails-2007.py  uniq-emails-2019.py  (+4 more)
ietf-data/: main.py
ietfdata/: attendees.py  datatracker.py  datatracker_doc.py  datatracker_ext.py  datatracker_helper.py  datatracker_types.py  document.txt  dt_backend.py  dtbackend.py  ma_backend.py  ma_backend_ietf.py  ma_parsing.py  mailarchive.py  mailarchive2.py  mailarchive3.py  mailarchive_ext.py  (+4 more)
(+44 files in other folders)
